plugins {
  id 'java'
}

sourceSets {
  main {
    java {
      srcDirs = ['core', 'node', 'web', 'shared', 'interop']
    }
    resources {
      srcDirs = []
    }
  }
}

def destDir = project.findProperty('destDir')

tasks.named('compileJava') {
  options.incremental = true
  options.release = 21
  options.compilerArgs << '--add-modules' << 'jdk.incubator.vector'
  if (destDir) {
    destinationDirectory = file(destDir)
  }
}

tasks.named('jar') {
  enabled = false
}
